force-app/main/default/objects/Contract/fields/AdjustedQuantity__c.field-meta.xml
<CustomField>
    <fullName>AdjustedQuantity__c</fullName>
    <description>Adjusted Quantity formula calculated in Salesforce</description>
    <formula>ShiftedQuantity__c - AllocatedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>