force-app/main/default/objects/Contract/fields/AllocatedQuantity__c.field-meta.xml
<CustomField>
    <fullName>AllocatedQuantity__c</fullName>
    <description>Allocated Quantity, updated via SAP</description>
    <label>Allocated Quantity</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>