force-app/main/default/objects/Contract/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Channel of the Account for the Contract</description>
    <label>Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>