force-app/main/default/objects/Contract/fields/ClimateNeutral__c.field-meta.xml
<CustomField>
    <fullName>ClimateNeutral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identification of the Climate Neutral property</description>
    <label>Climate Neutral</label>
    <type>Checkbox</type>
</CustomField>