force-app/main/default/objects/Contract/fields/ContractedQuantityUoM__c.field-meta.xml
<CustomField>
    <fullName>ContractedQuantityUoM__c</fullName>
    <description>Unit of Measure, updated via SAP</description>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L15</fullName>
            </value>
            <value>
                <fullName>M15</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>GJ</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>