force-app/main/default/objects/Contract/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <description>Number of the Contract Master in SAP</description>
    <label>Contract Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>