force-app/main/default/objects/Contract/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <description>Type of Contract</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZCA</fullName>
                <label>Contract Agreement - ZCA</label>
            </value>
            <value>
                <fullName>ZCRT</fullName>
                <label>Contract Agreement - ZCRT</label>
            </value>
            <value>
                <fullName>ZCPT</fullName>
                <label>Contract Agreement - ZCPT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>