force-app/main/default/objects/Contract/fields/CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditLimit__c</fullName>
    <description>Credit Limit updated from SAP</description>
    <formula>text(Account.CreditLimit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit</label>
    <type>Text</type>
</CustomField>