force-app/main/default/objects/Contract/fields/CurrentFulfilment__c.field-meta.xml
<CustomField>
    <fullName>CurrentFulfilment__c</fullName>
    <description>Current Fulfilment formula calculated in Salesforce</description>
    <formula>IF(ShiftedQuantity__c = 0 ,0, LiftedQuantity__c / ShiftedQuantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fulfilment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>