force-app/main/default/objects/Contract/fields/DownloadContract__c.field-meta.xml
<CustomField>
    <fullName>DownloadContract__c</fullName>
    <description>URL with the Paper Contract from Contractus system</description>
    <label>Download Contract</label>
    <type>Url</type>
</CustomField>