force-app/main/default/objects/Contract/fields/IsCMMaster__c.field-meta.xml
<CustomField>
    <fullName>IsCMMaster__c</fullName>
    <description>Is this a Contract Master Contract?</description>
    <formula>IF(ISBLANK(PostingPeriod__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is CM Master?</label>
    <type>Checkbox</type>
</CustomField>