force-app/main/default/objects/Contract/fields/LiftedQuantity__c.field-meta.xml
<CustomField>
    <fullName>LiftedQuantity__c</fullName>
    <description>Lifted Quantity, updated via SAP</description>
    <label>Lifted Quantity</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>