force-app/main/default/objects/Contract/fields/ModeOfTransport__c.field-meta.xml
<CustomField>
    <fullName>ModeOfTransport__c</fullName>
    <description>Mode of Transport options for the contract</description>
    <label>Mode of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ModeOfTransport</valueSetName>
    </valueSet>
</CustomField>