force-app/main/default/objects/Contract/fields/OpenItemDueforPayment__c.field-meta.xml
<CustomField>
    <fullName>OpenItemDueforPayment__c</fullName>
    <description>Invoices that are due to be paid</description>
    <formula>text( Account.OpenItems__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Item</label>
    <type>Text</type>
</CustomField>