force-app/main/default/objects/Contract/fields/OpenQuantity__c.field-meta.xml
<CustomField>
    <fullName>OpenQuantity__c</fullName>
    <description>Open Quantity formula calculated in Salesforce</description>
    <formula>ShiftedQuantity__c - LiftedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>