force-app/main/default/objects/Contract/fields/PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerm__c</fullName>
    <description>Payment Term options for the contract</description>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentTerm</valueSetName>
    </valueSet>
</CustomField>