force-app/main/default/objects/Contract/fields/PostingPeriod__c.field-meta.xml
<CustomField>
    <fullName>PostingPeriod__c</fullName>
    <description>Posting Period, updated via SAP</description>
    <label>Posting Period</label>
    <type>Date</type>
</CustomField>