force-app/main/default/objects/Contract/fields/PriceInformationDownload__c.field-meta.xml
<CustomField>
    <fullName>PriceInformationDownload__c</fullName>
    <description>URL with the Price Information from SAP, updated by SAP</description>
    <label>Price Information Download</label>
    <type>Url</type>
</CustomField>