force-app/main/default/objects/Contract/fields/PricingType__c.field-meta.xml
<CustomField>
    <fullName>PricingType__c</fullName>
    <description>Pricing Type of the Contract</description>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PricingType</valueSetName>
    </valueSet>
</CustomField>