force-app/main/default/objects/Contract/fields/ProductGroupCode__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupCode__c</fullName>
    <description>Updated by SAP, ATP Product Group [APO Product]</description>
    <label>Product Group Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>