force-app/main/default/objects/Contract/fields/ProductGroupDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupDescription__c</fullName>
    <description>updated by SAP, ATP Product Group [APO Product]</description>
    <label>Product Group Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>