force-app/main/default/objects/Contract/fields/QuotationValidFrom__c.field-meta.xml
<CustomField>
    <fullName>QuotationValidFrom__c</fullName>
    <description>Quotation Valid From, updated by SAP</description>
    <label>Quotation Valid From</label>
    <type>Date</type>
</CustomField>