force-app/main/default/objects/Contract/fields/QuotationValidTo__c.field-meta.xml
<CustomField>
    <fullName>QuotationValidTo__c</fullName>
    <description>Contract Quotation Valid To, updated by SAP</description>
    <label>Quotation Valid To</label>
    <type>Date</type>
</CustomField>