force-app/main/default/objects/Contract/fields/RemainingCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>RemainingCreditLimit__c</fullName>
    <description>Remaining Credit Limit updated from SAP</description>
    <formula>text(  Account.RemainingCreditLimit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Credit Limit</label>
    <type>Text</type>
</CustomField>