force-app/main/default/objects/Contract/fields/SalesOrganisation__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganisation__c</fullName>
    <description>Sales Organization of the Account for the Contract</description>
    <label>Sales Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>