force-app/main/default/objects/Contract/fields/SAPStatus__c.field-meta.xml
<CustomField>
    <fullName>SAPStatus__c</fullName>
    <description>SAP Status, updated automatically from SAP</description>
    <label>SAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>