force-app/main/default/objects/Contract/fields/ShiftedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ShiftedQuantity__c</fullName>
    <description>Contracted Quantity Updated via SAP</description>
    <label>Shifted Quantity</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>