force-app/main/default/objects/Contract/fields/ShippingCondition__c.field-meta.xml
<CustomField>
    <fullName>ShippingCondition__c</fullName>
    <description>Shipping Condition for the Contract</description>
    <label>Shipping Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingCondition</valueSetName>
    </valueSet>
</CustomField>