force-app/main/default/objects/Contract/fields/StorageCode__c.field-meta.xml
<CustomField>
    <fullName>StorageCode__c</fullName>
    <description>Updated by SAP</description>
    <label>Storage Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>