force-app/main/default/objects/Contract/fields/ValidFromStartDate__c.field-meta.xml
<CustomField>
    <fullName>ValidFromStartDate__c</fullName>
    <description>Contract Start Date</description>
    <label>Valid From(Start Date)</label>
    <type>Date</type>
</CustomField>