force-app/main/default/objects/Contract/fields/ValidToEndDate__c.field-meta.xml
<CustomField>
    <fullName>ValidToEndDate__c</fullName>
    <description>Contract End Date</description>
    <label>Valid To ( End Date)</label>
    <type>Date</type>
</CustomField>