force-app/main/default/objects/Contract/fields/ValidUntil__c.field-meta.xml
<CustomField>
    <fullName>ValidUntil__c</fullName>
    <description>Date when Credit Limit expires</description>
    <formula>text( Account.ValidUntil__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Until</label>
    <type>Text</type>
</CustomField>