force-app/main/default/objects/Contract/recordTypes/CEP_FPS_CONTRACT.recordType-meta.xml
<RecordType>
    <fullName>CEP_FPS_CONTRACT</fullName>
    <active>true</active>
    <label>FPS Contract</label>
</RecordType>