force-app/main/default/objects/Contract/recordTypes/CEP_FPS_CONTRACT_MASTER.recordType-meta.xml
<RecordType>
    <fullName>CEP_FPS_CONTRACT_MASTER</fullName>
    <active>true</active>
    <label>Contract Master</label>
</RecordType>