force-app/main/default/objects/Contract/recordTypes/CEP_FPS_SALES_CONTRACT.recordType-meta.xml
<RecordType>
    <fullName>CEP_FPS_SALES_CONTRACT</fullName>
    <active>true</active>
    <label>Sales Contract</label>
</RecordType>