force-app/main/default/objects/Contract/validationRules/InvalidStatusValue.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidStatusValue</fullName>
    <active>true</active>
    <description>validation rule to disallow the selection of the following values from Status standard field: &quot;Draft&quot;, &quot;In Approval Process&quot;.</description>
    <errorConditionFormula>AND(
				Not($Setup.CEPSkipValidationRules__c.Contract__c ),
OR(
				ISPICKVAL(Status, &apos;Draft&apos;),
				ISPICKVAL(Status, &apos;Activated&apos;),
				ISPICKVAL(Status, &apos;In Approval Process&apos;)
		)
)</errorConditionFormula>
    <errorMessage>Valid values for Status are: Open, Completed</errorMessage>
</ValidationRule>