force-app/main/default/objects/Contract/listViews/AllCompletedContracts.listView-meta.xml
<ListView>
    <fullName>AllCompletedContracts</fullName>
    <columns>ContractName__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ShippingCondition__c</columns>
    <columns>PricingType__c</columns>
    <columns>PaymentTerm__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.CEP_FPS_SALES_CONTRACT</value>
    </filters>
    <label>All Completed Contracts</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>