force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
    <sharedTo>
        <role>ACMECustomerManager</role>
        <role>AT_Sales_Representative</role>
        <role>BG_Sales_Representative</role>
    </sharedTo>
</ListView>