force-app/main/default/objects/Contract/listViews/MyDraftContracts.listView-meta.xml
<ListView>
    <fullName>MyDraftContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <label>My Draft Contracts</label>
    <sharedTo>
        <role>ACMECustomerManager</role>
        <role>AT_Sales_Representative</role>
        <role>BG_Sales_Representative</role>
    </sharedTo>
</ListView>